--- a/feather/build.gradle
+++ b/feather/build.gradle
@@ -15,8 +15,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    implementation 'org.apache.lucene:lucene-analysis-common:9.8.0'
 
-    // 필요한 다른 의존성들 추가
 }
 
 test {
